--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -123,6 +123,15 @@ body {
     left: 20px;
 }
 
+#mobile {
+    display: none;
+    align-items: center;
+}
+
+#close {
+    display: none;
+}
+
 /* Hero Section */
 
 #hero {
@@ -535,4 +544,163 @@ footer a:hover {
 footer .copyright {
     width: 100%;
     text-align: center;
+}
+
+/* Start Media Query */
+
+@media (max-width:799px) {
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    #navbar.active {
+        right: 0px;
+    }
+
+    #navbar li {
+        margin-bottom: 25px;
+    }
+
+    #mobile {
+        display: flex;
+        align-items: center;
+    }
+
+    #mobile i {
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #lg-bag {
+        display: none;
+    }
+
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-box {
+        margin: 15px 15px;
+    }
+
+    #product1 .pro-container {
+        justify-content: center;
+    }
+
+    #product1 .pro {
+        margin: 15px;
+    }
+
+    #banner {
+        height: 20vh;
+    }
+
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 30vh;
+    }
+
+    #banner3 {
+        padding: 0 40px;
+    }
+
+    #banner3 .banner-box {
+        width: 28%;
+    }
+
+    #newsletter .form {
+        width: 70%;
+    }
+
+    footer .copyright {
+        text-align: start;
+    }
+
+    .pro-details {
+        width: 50%;
+    }
+
+    .blog-box {
+        width: 40%;
+    }
+
+    .blog-img {
+        width: 100%;
+    }
+
+    .blog-details {
+        width: 50%;
+    }
+
+    .contact-details {
+        width: 50%;
+    }
+
+    .contact-form {
+        width: 50%;
+    }
+
+    .login-form {
+        width: 50%;
+    }
+
+    .signup-form {
+        width: 50%;
+    }
+
+    .pro-details {
+        width: 100%;
+    }
+
+    .blog-box {
+        width: 100%;
+    }
+
+    .blog-details {
+        width: 100%;
+    }
+
+    .contact-details {
+        width: 100%;
+    }
+
+    .contact-form {
+        width: 100%;
+    }
+
+    .login-form {
+        width: 100%;
+    }
+
+    .signup-form {
+        width: 100%;
+    }
 }
